# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")

module_out_path = "selectionfwk/selectionfwk"
ohos_unittest("selection_service_unit_mock_test") {
  module_out_path = module_out_path
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  cflags_cc = [
    "-std=c++17",
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  include_dirs = [
    "${selection_fwk_root_path}/service/include",
    "${selection_fwk_root_path}/utils/include",
  ]

  sources = [
    "mock_parameter.cpp",
    "sys_selection_config_repository_mock_test.cpp",
    "${selection_fwk_root_path}/service/src/sys_selection_config_repository.cpp",
  ]

  deps = [ "${selection_fwk_root_path}/service:selection_service", ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbeget_proxy",
  ]

  part_name = "selectionfwk"
  subsystem_name = "systemabilitymgr"
}