# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/taihe_idl/taihe.gni")

copy_taihe_idl("copy_selectionPanel") {
  sources = [ "idl/ohos.selectionInput.SelectionPanel.taihe" ] 
}
subsystem_name = "systemabilitymgr"
part_name = "selectionfwk"
taihe_generated_file_path_selectionPanel = "$taihe_file_path/out/$subsystem_name/$part_name/SelectionPanel"

ohos_taihe("run_taihe") {
  taihe_generated_file_path = "${taihe_generated_file_path_selectionPanel}"
  deps = [ ":copy_selectionPanel" ]
  outputs = [
    "$taihe_generated_file_path/src/ohos.selectionInput.SelectionPanel.ani.cpp",
    "$taihe_generated_file_path/src/ohos.selectionInput.SelectionPanel.abi.c",
  ]
}

generate_static_abc("SelectionPanel") {
  base_url = "$taihe_generated_file_path_selectionPanel"
  files = [ "$taihe_generated_file_path_selectionPanel/@ohos.selectionInput.SelectionPanel.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/SelectionPanel.abc"
  dependencies = [ ":run_taihe" ]
}

ohos_prebuilt_etc("selectionPanel_etc") {
  source = "$target_out_dir/SelectionPanel.abc"           
  module_install_dir = "framework"
  part_name = "$part_name"
  subsystem_name = "$subsystem_name"
  deps = [ ":SelectionPanel" ]
}

group("selectionPanel_taihe") {
    deps = [
      ":selectionPanel_etc",
    ]
}
