# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/systemabilitymgr/selectionfwk/selection_service.gni")

ohos_shared_library("selectionmanager_napi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  sources = [
    "js_selection_engine_setting.cpp",
    "panel_listener_impl.cpp",
    "selection_engine_module.cpp",
    "js_panel.cpp",
    "../selection_client/async_call.cpp",
    "../selection_client/js_selection_utils.cpp",
  ]

  include_dirs = [
    ".",
    "../../../../utils/include",
    "${target_gen_dir}",
    "../../../native/selection_ability/include",
    "../selection_client",
    "../../../common",
    "../../../../hiappevent_agent",
  ]

  deps = [
    "${selection_fwk_root_path}/common:selection_common",
    "${selection_fwk_root_path}/hiappevent_agent:selection_hiappevent_agent",
    "${selection_fwk_root_path}/interfaces/idl:selection_service_proxy",
    "${selection_fwk_root_path}/interfaces/idl:selection_listener_proxy",
    "${selection_fwk_root_path}/frameworks/native/selection_ability:selection_ability",
  ]

  cflags_cc = [ "-std=c++17" ]

  external_deps = [
    "ability_base:configuration",
    "ability_runtime:ability_context_native",
    "ability_runtime:abilitykit_native",
    "ability_runtime:extensionkit_native",
    "ability_runtime:napi_base_context",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "napi:ace_napi",
    "window_manager:libwm_lite",
    "resource_management:global_resmgr",
    "ability_runtime:app_context",
    "ffrt:libffrt",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "graphic_2d:window_animation",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module/selectioninput"
  subsystem_name = "systemabilitymgr"
  part_name = "selectionfwk"
}
